# headswap_V2

./: .gitignore  COLAB.md  README.md  pyproject.toml  requirements.txt
configs/: flux_kontext.yaml  klein4b.yaml  klein4b_paste_refine.yaml  klein4b_quality.yaml  klein4b_realism.yaml  krea2_identity_edit.yaml  omnigen2.yaml  qwen_baseline.yaml  qwen_baseline_t4.yaml  qwen_improved.yaml  step1x_edit.yaml
data/custom/: README.md
data/eval/: README.md  pairs.json
docs/: VALIDATION.md
notebooks/: colab_compare.ipynb  krea2_identity_edit.ipynb
results/: COMPARISON.md  WINNER.md  comparison.json
results/klein4b/: metrics.json
results/qwen_baseline/: metrics.json
results/qwen_improved/: metrics.json
scripts/: bootstrap_kaggle.sh  colab_demo.py  colab_env.py  download_kontext.py  download_krea2.py  download_models.py  download_omnigen2.py  download_step1x.py  models.json  prepare_eval_set.py  run_compare.py  run_krea2_warm.py  run_pipeline.py  setup_colab.sh  setup_comfyui.sh  setup_kaggle.sh  setup_krea2_nodes.sh  setup_omnigen2.sh
tests/: test_comfy_runtime.py  test_custom_eval.py  test_download_paths.py  test_enospc_hub_cleanup.py  test_full_load.py  test_gpu_profiler.py  test_inference_mode_unload.py  test_kontext_align_paste.py  test_krea2_edit_fast.py  test_krea2_speed_helpers.py  test_path_proof.py  test_place_file_without_doubling.py  test_preprocess_and_mock.py  test_profiling_reporting.py  test_qwen_baseline_speed_config.py  test_run_pipeline_cli.py  test_vae_bridge_probe.py  test_vram_load_probe.py
workflows/: bfs_klein_headswap.json
(+27 files in other folders)
